Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.9.6 (TBD)
-----------

- Fix broken stable API documentation on Read The Docs (#).
- Remove install requirement of setuptools, a regression introduced in 1.9.5.

1.9.5 (2023-10-11)
------------------

Bug fixes:

- Expand keys in schema mismatch exception, resolving #1278.
- Preserve the null properties and geometry of a Feature when serializing
  (#1276).

Packaging:

* The distribution name is now officially "fiona", not "Fiona". The import
  name remains "fiona".
* Builds now require Cython >= 3.0.2 (#1276).
* PyPI wheels include GDAL 3.6.4, PROJ 9.0.1, and GEOS 3.11.2.
* PyPI wheels include curl 8.4.0, addressing CVE-2023-38545 and CVE-38546.
* PyPI wheels are now available for Python 3.12.

1.9.4.post1 (2023-05-23)
------------------------

Extraneous files were unintentionally packaged in the 1.9.4 wheels. This post1
release excludes them so that wheel contents are as in version 1.9.3.

1.9.4 (2023-05-16)
------------------

- The performance of Feature.from_dict() has been improved (#1267).
- Several sources of meaningless log messages from fiona._geometry about NULL
  geometries are avoided (#1264).
- The Parquet driver has been added to the list of supported drivers and will
  be available if your system's GDAL library links libarrow. Note that fiona
  wheels on PyPI do not include libarrow as it is rather large.
- Ensure that fiona._vendor modules are found and included.
- Bytes type feature properties are now hex encoded when serializing to GeoJSON
  (#1263).
- Docstrings for listdir and listlayers have been clarified and harmonized.
- Nose style test cases have been converted to unittest.TestCase (#1256).
- The munch package used by fio-filter and fio-calc is now vendored and patched
  to remove usage of the deprecated pkg_resources module (#1255).

1.9.3 (2023-04-10)
------------------
